--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,12 +1,13 @@
-<h1>Heroes <small>Marvel & DC</small></h1>
-<div class="card-columns">
-  <div class="card">
-    <img src="assets/img/aquaman.png" class="card-img-top" alt="...">
+<h1 class="animated fadeIn fast">Heroes <small>Marvel & DC</small></h1>
+<div class="card-columns animated fadeIn">
+  <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let id = index">
+    <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">{{ heroe.nombre }}</h5>
+      <p class="card-text">{{ heroe.bio }}</p>
+      <p class="card-text"><small class="text-muted">{{ heroe.aparicion }}</small></p>
     </div>
-    <button class="btn btn-outline-primary btn-block">See more ...</button>
+    <button (click)="showHeroe(id)" class="btn btn-outline-primary btn-block">See more ...</button>
+    <!--a [routerLink]="['/heroe',id]"  class="btn btn-outline-primary btn-block">Ver más ...</a-->
   </div>
 </div>
